corrected css on sticky notes so words do no overflow

--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -14,6 +14,10 @@ body{
   color:#fff;
 }*/
 
+.sticky-notes {
+
+}
+
 .sticky-notes ul, li{
   list-style:none;
 }
@@ -23,20 +27,25 @@ body{
   padding:3em;
 }
 
-.sticky-notes ul li span{
+.sticky-notes ul li p{
+	word-wrap: break-word;
+	overflow: auto;
   text-decoration:none;
   color:#000;
   background:#ffc;
   display:block;
-  height:10em;
-  width:10em;
+  height:7em;
+  width:7em;
   padding:1em;
   /* Firefox */
   -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
+  -moz-transition:-moz-transform .15s linear;
   /* Safari+Chrome */
   -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  -webkit-transition:-webkit-transform .15s linear;
   /* Opera */
   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  -o-transition:-o-transform .15s linear;
 }
 
 .sticky-notes ul li{
@@ -44,39 +53,54 @@ body{
   float:left;
 }
 
-.sticky-notes ul li span{
+.sticky-notes ul li p{
   font-family: 'Reenie Beanie', cursive;
   font-size:180%;
 }
 
 /* Tilting notes */
-.sticky-notes ul li span{
+.sticky-notes ul li p{
   -webkit-transform:rotate(-6deg);
   -o-transform:rotate(-6deg);
   -moz-transform:rotate(-6deg);
 }
 
-/* Random tilting notes left and right */
-.sticky-notes ul li:nth-child(even) span {
+/* Random tilting and colour on notes*/
+.sticky-notes ul li:nth-child(even) p {
   -o-transform:rotate(4deg);
   -webkit-transform:rotate(4deg);
   -moz-transform:rotate(4deg);
   position:relative;
   top:5px;
+  background:#cfc;
 }
 
-.sticky-notes ul li:nth-child(3n) span {
+.sticky-notes ul li:nth-child(3n) p {
   -o-transform:rotate(-3deg);
   -webkit-transform:rotate(-3deg);
   -moz-transform:rotate(-3deg);
   position:relative;
   top:-5px;
+  background:#ccf;
 }
 
-.sticky-notes ul li:nth-child(5n) span {
+.sticky-notes ul li:nth-child(5n) p {
   -o-transform:rotate(5deg);
   -webkit-transform:rotate(5deg);
   -moz-transform:rotate(5deg);
   position:relative;
   top:-10px;
+}
+
+
+/* Zoom on Focus */
+.sticky-notes ul li p:hover,ul li p:focus {
+  -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
+  -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
+  box-shadow:10px 10px 7px rgba(0,0,0,.7);
+  -webkit-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  -o-transform: scale(1.25);
+  position:relative;
+  z-index:5;
 }
